Ticket #810: Checking password length as the user types and fixing layout bugs on small screens

--- a/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
@@ -7943,6 +7943,11 @@ form.ife .form-type-select select {
 form#user-login label {
   display: block;
 }
+form#user-register-form {
+  padding-right: 0;
+  padding-left: 0;
+  width: 100%;
+}
 form#user-register-form label {
   display: block;
   clear: both;
@@ -7967,7 +7972,7 @@ form#user-register-form label.danger, form#user-register-form label.error, form#
   right: 80%;
   padding-right: 11px;
   line-height: 43.2px;
-  width: 20%;
+  width: 30%;
   background: transparent;
 }
 form#user-register-form label.danger, form#user-register-form label.error {
