--- a/drupal/sites/all/themes/checkdesk/assets/scss/_forms.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/_forms.scss
@@ -96,6 +96,10 @@
   }
   // Registration form
   &#user-register-form {
+    padding-right: 0;
+    padding-left: 0;
+    width: 100%;
+
     label {
       display: block;
       clear: both;
@@ -122,7 +126,7 @@
       #{$from-direction}: 80%;
       padding-#{$from-direction}: $gutter-width;
       line-height: $absolute-line-height * 1.5;
-      width: 20%;
+      width: 30%;
       background: transparent;
     }
     label.danger, label.error {
